added vcard and favicon

--- a/index.html
+++ b/index.html
@@ -42,8 +42,10 @@
 			
 			<li><a class="google" href="http://www.google.com/profiles/twofivethreetwo" title="Google Profile">Google</a></li>
 		</ul>
+		
+		<a class="download" href="/JamesFleeting.vcf" title="Download James Fleeting vCard">Download vCard</a>
 	</section>
-	
+	<div class="clear">&nbsp;</div>
 	<footer>
 		<p>I'll will be at <a href="http://sxsw.com" title="South by SouthWest">SXSW</a> from March 11th to 17th in Austin, TX with Interactive and Film badges. Be sure to find me and introduce yourself!</p>			
 	</footer>
